# GC_Compiladors

./: CMakeLists.txt  README.md  desktop.ini  user_manual.txt
parser/: CMakeLists.txt  README.md  RREADME.md  main.c  main.h  stack.c  stack.h  test_expr.cscn  test_expr_p3dbg.txt  utils_files.c
parser/language/: CMakeLists.txt  language.c  language.h  language.txt
parser/module_args/: CMakeLists.txt
parser/module_debug/: CMakeLists.txt  debug.c  debug.h
parser/module_stack/: CMakeLists.txt
parser/modulo_automata/: CMakeLists.txt  automata.c  automata.h
parser/modulo_tokenlist/: CMakeLists.txt  test.cscn  test_tokenlist.c  tokenlist.c  tokenlist.h
parser/sra_engine/: CMakeLists.txt  sra_engine.c  sra_engine.h
preprocessor/: CMakeLists.txt  README.md
preprocessor/delete_comments/: CMakeLists.txt  delete_comments.c  delete_comments.h
preprocessor/delete_comments/tests/: input_comments.c
preprocessor/guardar_directivas/: directivas_types.h  guardar_directivas.h  test.c
preprocessor/macro_substitute/: CMakeLists.txt
preprocessor/macrostoring/: CMakeLists.txt  macrostoring.c  macrostoring.h
preprocessor/module_args/: module_args.c  module_args.h
preprocessor/module_preprocessor/: CMakeLists.txt  preprocessor.c  preprocessor.h
preprocessor/user_manual/: user_manual.c  user_manual.txt
src/: CMakeLists.txt  README.md  main.c  main.h
src/automata_engine/: CMakeLists.txt  automata_engine.c  automata_engine.h
src/counters/: CMakeLists.txt  counters.c  counters.h
src/delete_comments/: CMakeLists.txt  delete_comments.c  delete_comments.h
src/delete_comments/tests/: input_comments.c  output_comments.c  output_comments_pp.c
src/diagnostics/: CMakeLists.txt  diagnostics.c  diagnostics.h
src/guardar_directivas/: CMakeLists.txt  README.md  directivas_types.c  directivas_types.h  guardar_directivas.c  guardar_directivas.h  guardar_directivas_main.c  test.c
src/macro_substitute/: CMakeLists.txt  macro_substitute.c  macro_substitute.h
src/macrostoring/: CMakeLists.txt  macrostoring.c  macrostoring.h
src/module_args/: module_args.c  module_args.h
src/module_macrostoring/: macrostoring.c  macrostoring.h
src/module_preprocessor/: CMakeLists.txt  main_prueba.c  pp_shared.h  preprocessor.c  preprocessor.h
src/module_replacedir/: CMakeLists.txt  replace_dir.c  replace_dir.h
src/output_writer/: CMakeLists.txt  output_writer.c  output_writer.h
src/scanner/: CMakeLists.txt  scanner_core.c  scanner_core.h
src/sra_engine/: sra_engine.c  sra_engine.h
src/token_model/: CMakeLists.txt  token_model.c  token_model.h
src/user_manual/: CMakeLists.txt  user_manual.c  user_manual.h
tests/: CMakeLists.txt  fast_test.c  t1.c  t1.cscn  t1.dbgcnt  t2.c  t2_pp.c  t3.c  t3_pp.c  t4.h  t5.c  t5_pp.c  test_all_modules.c  test_all_modules.cscn  test_all_modules.dbgcnt  test_delete_comments.c  test_delete_comments_individual.c  test_lexer.c  test_lexer_token_model.c  test_macro_substitute.c  test_module_2.h
